helm/4-section/ingress/host-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-ingress
spec:
  rules:
  - host: nginx.local
    http:
      paths:
      - backend:
          service:
            name: nginx-clusterip
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: hello.local
    http:
      paths:
      - backend:
          service:
            name: hello-clusterip
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
